# multimath

./: CMakeLists.txt  Makefile  README.md
TesterPrograms/: ArrayTester.cpp  benchmarkTester.cpp  primecheckerTester.cpp  sinusCalcTester.cpp
include/: benchmark.h  googlebenchmark.h
include/mathomp/: mathomp.h
src/: gbenchmark.cpp  mathomp.cpp
